# ldap-mcp-server

./: .gitignore  README.md  pyproject.toml
lib/ldap_mcp_server/: __init__.py  __main__.py  _version.py  cli.py  config.py  ldap_client.py  ldif.py  middleware.py  resources.py  server.py  tools.py
tests/: __init__.py  test_config.py  test_ldif.py  test_middleware.py  test_server.py
